--- a/src/app/features/login/login.component.css
+++ b/src/app/features/login/login.component.css
@@ -2,6 +2,10 @@
   max-width: 100%;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
   border-radius: 5px;
+
+  & h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
 }
