--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,4 +1,4 @@
-<main class="login-container">
-  <h2>Login</h2>
+<div class="login-container">
+  <h1>Login</h1>
   <app-login-form />
-</main>
+</div>
