--- a/src/app/shared/components/main-button.component.css
+++ b/src/app/shared/components/main-button.component.css
@@ -4,14 +4,14 @@ button {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-}
 
-button.disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
-}
+  &.disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
 
-button:hover:not(.disabled) {
-  background-color: #007bff;
-  color: #fff;
+  &:hover:not(.disabled) {
+    background-color: #007bff;
+    color: #fff;
+  }
 }
