feat: add cursor pointer to logout

--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -7,7 +7,7 @@
         </li>
       }
       <li>
-        <a (click)="logout()">Logout</a>
+        <a (click)="logout()" class="logout">Logout</a>
       </li>
     </ul>
   } @else {
